[gd_scene load_steps=22 format=3 uid="uid://b3b0l5e2kh7mc"]

[ext_resource type="Script" path="res://World/Objects/Magic/Wind/LingeringTornado.gd" id="1_v7phb"]
[ext_resource type="Script" path="res://World/Objects/Scripts/Hitbox.gd" id="2_kl0jm"]
[ext_resource type="Texture2D" uid="uid://ikebn4yq3yjf" path="res://Assets/Images/Magic/wind/projectile.png" id="2_y5pdp"]
[ext_resource type="AudioStream" uid="uid://cf2jarycewv12" path="res://Assets/Sound/Sound effects/Magic/Wind/tornado.mp3" id="4"]
[ext_resource type="Texture2D" uid="uid://bt8wejlwv77xj" path="res://Assets/Images/Misc/light.png" id="5"]

[sub_resource type="RectangleShape2D" id="39"]
size = Vector2(0, 0)

[sub_resource type="Curve" id="46"]
max_value = 3.0
_data = [Vector2(0.00103413, 1.2973), 0.0, 0.0, 0, 0, Vector2(1, 0.707061), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_5spi3"]
atlas = ExtResource("2_y5pdp")
region = Rect2(0, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_o86oc"]
atlas = ExtResource("2_y5pdp")
region = Rect2(112, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8htq5"]
atlas = ExtResource("2_y5pdp")
region = Rect2(224, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5fe7"]
atlas = ExtResource("2_y5pdp")
region = Rect2(336, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cahmf"]
atlas = ExtResource("2_y5pdp")
region = Rect2(0, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc7xi"]
atlas = ExtResource("2_y5pdp")
region = Rect2(112, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvfp1"]
atlas = ExtResource("2_y5pdp")
region = Rect2(224, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmgvh"]
atlas = ExtResource("2_y5pdp")
region = Rect2(336, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_37non"]
atlas = ExtResource("2_y5pdp")
region = Rect2(0, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyk2g"]
atlas = ExtResource("2_y5pdp")
region = Rect2(112, 224, 112, 112)

[sub_resource type="SpriteFrames" id="40"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5spi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o86oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8htq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5fe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cahmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc7xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvfp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmgvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37non")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyk2g")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="44"]
radius = 43.0116

[sub_resource type="Animation" id="45"]
resource_name = "play"
length = 2.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3n2f"]
_data = {
"play": SubResource("45")
}

[node name="LingeringTornado" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_v7phb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("39")
disabled = true

[node name="TornadoParticles" type="Node2D" parent="."]
modulate = Color(1.6, 1.6, 1.6, 1)
position = Vector2(0, 13)

[node name="Particles1" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(18, -80)
emitting = false
amount = 45
lifetime = 2.5
lifetime_randomness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("46")

[node name="Particles2" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(18, -80)
emitting = false
amount = 45
lifetime = 2.5
lifetime_randomness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("46")
color = Color(0.815686, 0.815686, 0.815686, 1)

[node name="Particles3" type="CPUParticles2D" parent="TornadoParticles"]
modulate = Color(1.12, 1.12, 1.12, 1)
position = Vector2(18, -80)
emitting = false
amount = 45
lifetime = 2.5
lifetime_randomness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("46")
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="TrailParticles" type="Node2D" parent="."]
position = Vector2(0, 13)

[node name="Particles1" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -13)
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0

[node name="Particles2" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -13)
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
color = Color(0.815686, 0.815686, 0.815686, 1)

[node name="Particles3" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(0, -13)
amount = 16
lifetime = 4.0
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1.16, 1.16, 1.16, 1)
position = Vector2(30, -71)
scale = Vector2(2, 2)
sprite_frames = SubResource("40")
animation = &"new_animation"
frame_progress = 0.428722

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 264192
script = ExtResource("2_kl0jm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("44")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j3n2f")
}

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(18, -67)
scale = Vector2(0.71875, 0.746094)
energy = 1.03
shadow_enabled = true
texture = ExtResource("5")
